syntax = "proto3";
package zetachain.zetacore.authority;

import "authority/policies.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/zetacore/x/authority/types";

// GenesisState defines the authority module's genesis state.
message GenesisState {
  Policies policies = 1 [(gogoproto.nullable) = false];
}
